lendo sql de uma forma diferente para evitar que nao encontre o arquivo